# RestaurantOne

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  data.json  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: DeployToAzure.yml  azure-webapps-python.yml  codeql.yml  pylint.yml
api/: data.py  forms.py  routes.py
api/auth/: auth.py
api/controllers/: __init__.py  accounts_controller.py  auth_controller.py  auth_controlller.py  base_controller.py  evens_controller.py  event_signal_dispatch.py  invoices_controller.py  menu_items_controller.py  menus_controlle.py  menus_controller.py  orders_controller.py  payments_controller.py  reservations_controller.py  restaurants_controller.py  shippment_controller.py  susbcription_controller.py  tenants_controller.py  tracking_controller.py
api/core/: base.py
api/db/: __init__.py  client.py
api/db_models/: __init__.py  models.py
api/events/: enums.py
api/models/: __init__.py  models.py
api/permissions/: __init__.py  auth_filters.py  enums.py
api/redis/: __init__.py  client.py
api/sessions/: sessions.py
cli/: cli.py  migrations.py  model.py  random_data.py
client/: .env  .eslintrc  .gitignore  jsconfig.json  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: routes.js  serviceWorker.js
migrations/versions/: 05cfe7e99128_.py  149e97ddfaa8_.py  1aeca66398a2_.py  1c84308832f2_.py  1d5b99f9e72b_.py  218b45050ca3_.py  26c5d50f9974_.py  296dd6e550a1_.py  2bf617c87cc8_.py  2f64436a9326_sync_models.py  (+44 more)
templates/: login.html  signup.html
ui/: package-lock.json  package.json
(+148 files in other folders)
