[tool.poetry]
name = "restaurantone"
version = "0.1.0"
description = "Restaurant management application developed using Flask and Postgresql"
authors = ["michael goboola <raniahgobz@outlook.com> Jed Bahena <jedbahena@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
Flask = "1.1.2"
SQLAlchemy = "1.3.24"
redis = "4.5.1"
flask-redis = "0.4.0"
Flask-SQLAlchemy = "2.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
