[tool.poetry]
name = "restaurantone"
version = "0.1.0"
description = "Restaurant management application developed using Flask and Postgresql"
authors = ["michael goboola <raniahgobz@outlook.com> Jed Bahena <jedbahena@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
flask = "2.2.3"
click= "8.0.3"
sqlalchemy= "2.0.6"
flask-sqlalchemy= "3.0.3"
flask-migrate= "4.0.4"
flask-login= "0.6.2"
Flask-Perm= "0.2.8"
flask-wtf= "0.14.3"
flask-babel= "1.0.0"
flask-mail= "0.9.1"
flask-cors= "3.0.10"
flask-moment= "0.11.0"
flask-debugtoolbar= "0.11.0"
flask-script= "2.0.6"
countries= "0.2.0"
phonenumbers= "8.12.24"
psycopg2-binary= "2.9.5"
rave_python= "1.2.16"
redis= "4.5.1"
babel= "2.10.3"
prices= "1.0.0"
stripe= "2.55.2"
flask-redis= "0.4.0"
flask-socketio= "5.1.0"
promise= "2.3.0"
measurement= "3.2.0"
python-dotenv= "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
